--- a/index.html
+++ b/index.html
@@ -173,6 +173,28 @@
     </div>
     <!-- Banner Ends Here -->
 
+    <section class="call-to-action">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="main-content">
+              <div class="row">
+                <div class="col-lg-8">
+                  <span>uni Blog</span>
+                  <h4>A blog for project!</h4>
+                </div>
+                <div class="col-lg-4">
+                  <div class="main-button">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
 
   <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
